# time-series-forecasting-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/datasets/: local_csv.yaml  public_time_series.yaml
configs/examples/: appliances_energy_half_hour_demo.yaml  appliances_energy_long_demo.yaml  compare_feature_forecast.yaml  csv_forecast.yaml  (+6 more)
docs/: api_design.md  architecture.md  artifacts.md  checkpoint_format.md  compare_design.md  course_requirements.zh-CN.md  dashboard_demo.md  dashboard_demo.zh-CN.md  data_format.md  dataset_catalog.md  demo_guide.md  deployment_design.md  development_process.md  durable_queue_design.md  exogenous_features_design.md  final_report_outline.md  jobs.md  leaderboard_format.md  model_zoo.md  release_checklist.md  report_export.md  requirements.md  roadmap.md  security_model.md
examples/: custom_dataset.py  train_basic.py  train_csv.py
scripts/: format.sh  test.sh
tests/: helpers.py  test_api.py  test_artifact_service.py  test_artifacts.py  test_catalog_loader.py  test_checkpoint.py  test_cli.py  test_compare_config.py  test_compare_runner.py  test_config.py  test_csv_dataset.py  test_csv_training.py  test_data_registry.py  test_dataset_assets.py  test_docs.py  test_evaluator.py  test_experiment_store.py  test_forecast_dimensions.py  test_jobs.py  test_jobs_api.py  test_metrics.py  test_model_export.py  test_models.py  test_profile.py  test_runner_hardening.py  test_runner_smoke.py  test_scaler.py
(+101 files in other folders)
