[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-platform"
version = "0.1.0"
description = "Configuration-driven time series forecasting platform MVP."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TS Platform Team" }]
dependencies = [
  "fastapi>=0.115",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "torch>=2.2",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
ts-platform = "ts_platform.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ts_platform.api" = ["static/*.html", "static/*.js", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["ts_platform"]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = []
